# FairCAPO

./: .gitignore  CLAUDE.md  README.md  STATUS.md  conftest.py  pyproject.toml
baselines/: gepa_runner.py  initial_prompt.py  mocapo_style_runner.py  nsga2_po_runner.py  promptolution_runner.py
configs/: dashboard.yaml  evaluate_pareto_bbq.yaml  evaluate_pareto_bbq_ablation.yaml  evaluate_pareto_bbq_ablation_diag.yaml  evaluate_pareto_bbq_diag.yaml  evaluate_pareto_bbq_nsga.yaml  evaluate_pareto_bbq_nsga_diag.yaml  evaluate_pareto_mocapo_style_subj_ddev30.yaml  evaluate_pareto_subj_mistral.yaml  evaluate_pareto_subj_mistral_ddev30.yaml  experiment_table.yaml  experiment_table_bbq.yaml  mo_metrics_summary.yaml  mocapo_baseline_bbq_local.yaml  mocapo_baseline_bbq_wzero.yaml  mocapo_baseline_subj_ddev30.yaml  nsga2_po_bbq.yaml  phase1_baseline.yaml  phase1_subj_mocapo_style.yaml  phase2_budgeted_mocapo_bbq_local.yaml  phase2_budgeted_mocapo_bbq_wzero.yaml  phase2_budgeted_mocapo_subj.yaml  phase2_budgeted_mocapo_subj_ddev30.yaml  phase2_counterfactual_fairness.yaml  phase2_prompt_pool_bbq.yaml  phase2_prompt_pool_subj.yaml  phase2_prompt_portfolio.yaml  phase2_risk_fairness_demo.yaml  toy.yaml
dashboard/: app.py  components.py
data/: fairness_bbq.jsonl  fairness_bbq_holdout.jsonl  fairness_bbq_holdout_large.jsonl  fairness_counterfactual_subj.yaml  fairness_counterfactual_subj_adversarial.yaml
docs/: FairCAPO_explained.txt  _mocapo_extracted.txt  bbq_posthoc_fairness_finding.md  hpc_lm_studio_hosting.md  mocapo_gap_analysis_S12.md
experiments/: datasets.py  logger.py  (+2 more)
(+117 files in other folders)
